# acoustic-research

./: .gitignore  :   ARRAY_FIRMWARE_SUMMARY.md  BOM_flexural_beam_probe.md  CMakeLists.txt  DIGIKEY_ORDER_V5_COMPLETE.md  DMA_IMPLEMENTATION.md  DMA_TRIGGER_WIRING.md  ENGINEERING_CHALLENGE.md  GLASSHOUSE_TOMATO_PIPELINE.md  HEARTBEAT.md  IDENTITY.md  KICAD_TUTORIAL.md  LICENSE  MEMORY.md  Makefile  ONEC_CHANNEL_BREADBOARD_PLAN.md  PCB_FINALIZATION_CHECKLIST.md  PRODUCTION_READINESS.md  PROTOTYPING_ROADMAP.md  PYQTGRAPH_GUIDE.md  README.md  RED_PITAYA_INTEGRATION.md  RED_PITAYA_PROCUREMENT.md  STREAMING_RECORDING.md  TOOLS.md  TURBOQUANT_V5_ACTION_PLAN.md  TurboQuant_Investor_Pitch_Deck.pptx  V5_FINAL_VERIFICATION.md  acoustic_resonance_physics.md  adaptive_sampling.py  add_instance_footprints.py  advanced_display.py  array_commands.cpp  array_control.h  array_control_host.py  array_dma_integration.h  bayesian_inference_priors.py  bayesian_inversion_calibrated.py  blog_post_week2_acoustic_nde.md  (+106 more)
.openclaw/: workspace-state.json
00-Core/: .gitignore
03-Engineering-Challenges/: 2026-04-08_dsp_kw_transform.md  2026-04-09_engineering.md  2026-04-10_engineering.md  2026-04-11_engineering.md  2026-04-14_engineering.md  2026-04-15_engineering.md
06-Tools-Scripts/: workspace_search.py
2026-03-07/: mathematical_framework.md  research_plan_refreshed.md  week1_reading_list.md
ad9833_test_esp32s3/: ad9833_test_esp32s3.ino
blink_esp32s3/: blink_esp32s3.ino
challenges/: 2026-03-14.md  2026-03-21.md  2026-03-24.md  2026-03-26_learning.md  2026-03-26_signal_processing.md  2026-03-26_vocabulary.md  2026-03-27_learning.md  2026-03-29.md  2026-04-04.md  2026-04-07_acoustic_nde.md  2026-04-07_learning_physics_math.md  2026-04-09_learning.md  2026-04-10_learning.md  2026-04-12_learning.md  2026-04-13.md  2026-04-14_learning.md  (+16 more)
(+448 files in other folders)
